# betterplots

./: .gitignore  README.md  pyproject.toml  test.py
bettercorners/: main.py
bettercorners/test/: corner_test.py
betterstyle/: __init__.py  betterstyle.mplstyle  set_style.py
