[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bettercorners"
version = "0.0.0"
authors = [
  { name="Rhys Shaw", email="rhysc3p0@gmail.com" },
  {name="Hattie Stewart", email="hattie.stewart@bristol.ac.uk"}
]
maintainers = [
{name="Rhys Shaw", email="rhysc3p0@gmail.com"},
{name="Hattie Stewart", email="hattie.stewart@bristol.ac.uk"}
]
keywords = ["Plotting", ""]
description = "A corner Plotting Package."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/RhysAlfShaw/LCSpy"
"Bug Tracker" = "https://github.com/RhysAlfShaw/LCSpy/issues"